[metadata]
name = magrock
version = 0.0.1
author = Andre L. A. Reis
author_email = reisandreluis@gmail.com
description = Package for modeling and inversion of SMM data for Rock magnetism and Paleomagnetism application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrelreis/magrock
license = BSD 3-Clause License
project_urls =
        Bug Tracker = https://github.com/andrelreis/magrock/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
